--- a/template/index.html
+++ b/template/index.html
@@ -143,19 +143,19 @@
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/xbox.jpg" alt="Image">
+                <img src="images/xbox.png" alt="Image">
               </figure>
             </div>
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/spot.jpg" alt="Image">
+                <img src="images/spot.png" alt="Image">
               </figure>
             </div>
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/play.jpg" alt="Image">
+                <img src="images/uber.png" alt="Image">
               </figure>
             </div>
 
