--- a/template/contact.html
+++ b/template/contact.html
@@ -36,9 +36,9 @@
       <div class="site-mobile-menu-body"></div>
     </div>
     
-    <header class="site-navbar py-3" role="banner">
+    <header class="site-navbar py-2" role="banner">
 
-      <div class="container fixed-top">
+      <div class="container">
         <div class="row align-items-center">
           
           <div class="col-11 col-xl-2">
