--- a/template/index.html
+++ b/template/index.html
@@ -38,7 +38,7 @@
     
     <header class="site-navbar py-2" role="banner">
 
-      <div class="container fixed-top" style="background-color: #333333;">
+      <div class="container">
         <div class="row align-items-center">
           
           <div class="col-11 col-xl-2">
@@ -46,7 +46,6 @@
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
-
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="desafios.html">Desafios</a></li>
