--- a/template/usuario/index.html
+++ b/template/usuario/index.html
@@ -41,38 +41,48 @@
       <div class="container">
         <div class="row align-items-center">
           
-          <div class="col-11 col-xl-2">
+          <div class="col-11 col-md-2">
             <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">Recicle</a></h1>
           </div>
-          <div class="col-12 col-md-10 d-none d-xl-block">
-            <nav class="site-navigation position-relative text-right" role="navigation">
+          <div class="col-12 col-md-10 d-none d-md-block">
+            <nav class="d-flex site-navigation position-relative text-right" role="navigation">
 
-              <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="desafios.html">Desafios</a></li>
-                <li><a href="contact.html">Contato</a></li>
-                <li><a href="about.html">Sobre</a></li>
-                <li>
-                  <div class="btn-group">
-                    <button type="button" class="dropdown-toggle bg-transparent border-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="icon-user-circle"></i>
-                    </button>
-                    <div class="dropdown-menu dropdown-menu-right">
-                      <div class="dropdown-item-text">Nome do usuário</div>
-                      <div class="dropdown-item-text mb-3">usuario@email.com</div>
-                      <button class="dropdown-item" type="button">Meus desafios</button>
-                      <button class="dropdown-item" type="button">Minha conta</button>
-                      <button class="dropdown-item" type="button">Sair</button>
-                    </div>
-                  </div>
-                </li>
+              <ul class="site-menu js-clone-nav ml-auto d-none d-md-block">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="desafios.html">Desafios</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#" class="mb-4 mb-md-0">Sobre</a></li>
               </ul>
+
+              <div class="btn-group">
+                <button type="button" class="dropdown-toggle bg-transparent border-0 text-white" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="icon-user-circle"></i>
+                </button>
+  
+                <div class="dropdown-menu dropdown-menu-right">
+                  <div class="dropdown-item-text">Nome do usuário</div>
+                  <div class="dropdown-item-text">usuario@email.com</div>
+                  <hr style="border-top: 2px solid #1EBFA1">
+                  <a href="desafios.html" class="dropdown-item">Meus desafios</a>
+                  <a href="my-account.html" class="dropdown-item">Minha conta</a>
+                  <a href="#" class="dropdown-item">Sair</a>
+                </div>
+              </div>
             </nav>
           </div>
 
 
-          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
+          <div class="d-inline-block d-md-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
+          <nav class="d-md-none">
+            <ul class="site-menu js-clone-nav mx-auto d-none">
+              <li class="dropdown-item-text pt-4" style="border-top: 2px solid #1EBFA1">Nome do usuário</li>
+              <li class="dropdown-item-text">usuario@email.com</li>
+              <li><a href="desafios.html" class="dropdown-item">Meus desafios</a></li>
+              <li><a href="my-account.html" class="dropdown-item">Minha conta</a></li>
+              <li><a href="#" class="dropdown-item">Sair</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
     </header>
@@ -107,7 +117,7 @@
             <div class="icon">
               <span class="icon-settings"></span>
             </div>
-            <a href="#">
+            <a href="my-account.html">
               <h2 class="my-4 heading">Minha Conta</h2>
             </a>
             <p>Edite as configurações da sua conta do Recicle.</p>
@@ -118,7 +128,7 @@
             <div class="icon">
               <span class="icon-map-marker"></span>
             </div>
-            <a href="#">
+            <a href="ecopontos.html">
               <h2 class="my-4 heading">Ecopontos</h2>
             </a>
             <p>Veja as cooperativas proximas de você.</p>
@@ -210,10 +220,10 @@
           <div class="col-md-2">
             <h2 class="mb-4">Menu</h2>
             <ul class="list-unstyled">
-              <li><a href="login.html">Entrar</a></li>
+              <li><a href="ecopontos.html">Ecopontos</a></li>
               <li><a href="desafios.html">Desafios</a></li>
-              <li><a href="contact.html">Contato</a></li>
-              <li><a href="about.html">Sobre</a></li>
+              <li><a href="#">Contato</a></li>
+              <li><a href="#">Sobre</a></li>
             </ul>
           </div>
           <div class="col-md-3">
